Fixed shifting up bug

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -67,16 +67,14 @@
   
   /* The <article> tag specifies independent, self-contained content. */
   article {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    align-items: center;
     padding: 10px;
     width: 100%;
   }
 
   .items {
-    flex: 1;
+    margin: 5px auto;
   }
 
 
@@ -86,7 +84,6 @@
 
   /* Wrap everything under the header in a container */
   .container {
-    display: grid;
     width: 100%;
     height: 100%;
   }
@@ -102,12 +99,12 @@
   
   /* Define section for the todo list portion */
   .right {
+    display: inline-block;
     background-color: #3d25aa;
     position: absolute;
     right: 0px;
     width: 50%;
-    height: inherit;
-    flex-direction: row;
+    height: 100%;
   }
 
   /* Define class for all buttons */
